# new_bayescode

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  codecov.yml
data/: multi.ali  toydata.tree
examples/: birth_weight.cpp  simu_and_infer_example.cpp
src/: brownian_clock_globom.cpp  clock_globom.cpp  codonm2a.cpp  coevol.cpp  coin_tosses_beta_MPI.cpp  coin_tosses_beta_modular_MPI.cpp  data_preparation.hpp  geneom.cpp  geneom_mpi.cpp  globom.cpp  globom_mpi.cpp  mapping_brownian_clock_globom.cpp  mixom.cpp  mixpoissongamma.cpp  mpi_example.cpp  multigene_mpi_coevol.cpp  mutseldp.cpp  prodpoi.cpp  selac.cpp  selacNe.cpp  simple_model.cpp  siteom.cpp  traceable_collection.hpp
src/components/: ConsoleLogger.hpp  InferenceAppArgParse.hpp  RegistrarBase.hpp  Tracer.hpp  custom_tracer.hpp  test.cpp  traits.hpp
src/global/: Random.cpp  Random.hpp  defs.hpp
src/lib/: AAMutSelOmegaCodonSubMatrix.cpp  AAMutSelOmegaCodonSubMatrix.hpp  BranchSitePath.cpp  BranchSitePath.hpp  ChronoBranchLengths.hpp  Chronogram.hpp  CodonStateSpace.hpp  CodonSubMatrix.cpp  CodonSubMatrix.hpp  CodonSuffStat.hpp  ContinuousData.hpp  CovMatrix.hpp  GTRSubMatrix.hpp  GTRSuffStat.hpp  GammaSuffStat.hpp  InverseWishart.hpp  MultivariateBrownianTreeProcess.hpp  MultivariateNormalSuffStat.hpp  OccupancySuffStat.hpp  PathSuffStat.hpp  PhyloProcess.cpp  PhyloProcess.hpp  PoissonSuffStat.hpp  RelativePathSuffStat.hpp  SequenceAlignment.cpp  SubMatrix.cpp  SubMatrix.hpp  T92SubMatrix.hpp  TaxonSet.cpp  TaxonSet.hpp  UnivariateBrownianTreeProcess.hpp  dSOmegaPathSuffStat.hpp  invwishart.hpp  linalg.cpp
src/lib/old_code/: GammaSuffStat.hpp  SuffStat.hpp
src/montecarlo/: split_tree.hpp  tree_process.hpp  tree_process_move.hpp
src/mpi_components/: Process.hpp  broadcast.hpp  gather.hpp  partition.hpp  reduce.hpp  reduce_suffstats.hpp  scatter.hpp  unique_ptr_utils.hpp  utils.hpp
src/operations/: interfaces.hpp  proxies.hpp  test.cpp
src/processes/: path2norm.hpp  sum_of_path.hpp  univariate_brownian.hpp
src/submodels/: branch_map.hpp  branchlength_sm.hpp  brownian_clock_globom_model.hpp  chronogram.hpp  clock_globom_model.hpp  codonm2a_model.hpp  codonmatrix_sm.hpp  coevol_model.hpp  discrete_gamma.hpp  geneom_model.hpp  geneom_mpi_model.hpp  globom_model.hpp  globom_mpi_model.hpp  grantham.hpp  grid_selac_model.hpp  gtr.hpp  iidgamma_mi.hpp  incomplete_gamma.hpp  invwishart.hpp  mapping_brownian_clock_globom_model.hpp  mg_omega.hpp  mgomega.hpp  mixom_model.hpp  move_reporter.hpp  multigene_mpi_coevol_model.hpp  mutseldp_model.hpp  mutselg_model.hpp  mutselomega.hpp  nucrates_sm.hpp  omega_sm.hpp  selacNe_model.hpp  selac_model.hpp  selac_profile.hpp  selac_profilearray.hpp  sitecodonmatrix_sm.hpp  siteom_model.hpp  siteomega_sm.hpp  submodel_external_interface.hpp  suffstat_wrappers.hpp  t92.hpp  (+3 more)
src/tags/: traits.hpp
src/tree/: implem.cpp  interface.hpp  newick_output.hpp  tree_factory.hpp
